styling fixes for sidebar on mobile view implemented

--- a/src/pages/Dashboard/Component/Listings/Components/Amenities/Amenities.module.css
+++ b/src/pages/Dashboard/Component/Listings/Components/Amenities/Amenities.module.css
@@ -67,3 +67,6 @@
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
 }
+.error {
+  color: red;
+}
